--- a/assets/style.css
+++ b/assets/style.css
@@ -69,7 +69,7 @@ h2 {
 .card-box {
     border: dashed 1px white;
     position: relative;
-    display: flexbox;
+    display: flex;
     flex-direction: column;
 }
 
@@ -88,11 +88,16 @@ h2 {
     margin: 10px;
 }
 
+.code-box {
+    height: 100%;
+}
+
 pre {
     background: linear-gradient(41deg, var(--text-color), var(--card-color1));
     border-radius: 8px;
     margin: 0 14px 10px 14px;
     position: relative;
+    height: 95%;
 }
 
 code {
@@ -107,6 +112,7 @@ code {
 .card-box:hover,
 .card-box:hover .header-box {
     box-shadow: 0px 0px 8px rgba(232, 102, 236, 1), 0 0 15px rgba(232, 102, 236, 1);
+    transform: scale(1.05, 1.05);
 }
 
 @media (max-width: 992px) {
